5.0/ru/3-zero.rst
С нуля до развёртывания
===========================================

Мне нравится работать быстро. Я хочу, чтобы наш маленький проект был доступен в продакшене как можно скорее. Вот прямо сейчас. Поскольку мы ещё ничего не сделали, начнём с развёртывания простой и понятной страницы-заглушки типа "Under construction". Вам это понравится!

Потратьте немного времени, чтобы найти в интернете наиболее подходящую, старомодную анимированную картинку с надписью "Under construction". Вот `эту GIF-картинку  <http://clipartmag.com/images/website-under-construction-image-6.gif>`_ я собираюсь использовать:

.. image:: images/under-construction.gif
    :align: center

Я же вам говорил, что будет очень весело.

Инициализация проекта
-----------------------------------------

Создайте новый Symfony-проект с помощью CLI-утилиты ``symfony``, которую мы ранее установили:

.. code-block:: bash

    $ symfony new guestbook --version=5.0
    $ cd guestbook

Эта команда представляет собой обертку над ``Composer``, которая облегчает создание проектов на Symfony. Она использует `заготовку проекта <https://github.com/symfony/skeleton>`_, которая включает в себя минимальный набор зависимостей; компоненты Symfony, необходимые практически для любого проекта: консольная утилита и HTTP-абстракция, используемая для создания веб-приложений.

Если вы посмотрите на скелет проекта в репозитории на GitHub, то заметите, что он почти пуст. Там только лишь файл ``composer.json``. Однако в директории ``guestbook`` полно файлов. Как это вообще возможно? Ответ кроется в пакете ``symfony/flex``. Symfony Flex — это плагин для Composer, который внедряется в процесс установки. Когда он обнаруживает пакет, который содержит так называемый *рецепт*, Composer выполняет его.

Основной точкой входа рецептов Symfony является файл манифеста, в котором описаны операции, которые необходимо выполнить, чтобы автоматически зарегистрировать пакет в Symfony-приложении. Вам никогда не придётся заглядывать в файл README для установки пакета Symfony. Автоматизация — ключевая особенность Symfony.

Учитывая, что Git установлен на вашем компьютере, команда ``symfony new`` также создала Git-репозиторий и сделала в нём первый коммит.

Посмотрите на структуру директорий:

.. code-block:: text
    :class: ignore

    ├── bin/
    ├── composer.json
    ├── composer.lock
    ├── config/
    ├── public/
    ├── src/
    ├── symfony.lock
    ├── var/
    └── vendor/

Директория ``bin/`` содержит основной скрипт командной строки ``console``. Вы будете использовать его постоянно.

Директория ``config/`` состоит из набора готовых конфигурационных файлов. По одному файлу на каждый пакет. Вам редко предстоит их редактировать, поскольку значения по умолчанию хорошо подходят для приложения.

Директория ``public/`` — это корневая директория сайта, а скрипт ``index.php`` в ней — основная точка входа для всех динамических HTTP-ресурсов.

Директория ``src/`` содержит весь код, который вы напишете — в ней вы будете проводить большую часть времени. По умолчанию все классы в этой директории используют пространство имён ``App``. Это ваша рабочая директория, ваш код, ваша бизнес-логика. Symfony имеет мало общего с этим.

Директория ``var/`` содержит кеш-файлы, логи и прочие файлы, сгенерированные приложением во время выполнения; не обращайте внимания на неё. Это единственная директория, которая должна быть доступна для записи в продакшене.

Директория ``vendor/`` содержит все пакеты, которые установил Composer, включая и сам Symfony. Это наше секретное оружие для максимальной продуктивности. Давайте не будем изобретать велосипед, а вместо этого воспользуемся существующими библиотеками для решения сложных задач. В этой директории всем заведует Composer, поэтому ничего в ней не изменяйте.

Это всё, что вам нужно знать на данный момент.

Создание публичных ресурсов
----------------------------------------------------

К всему, что находится в директории ``public/``, можно обратиться из браузера. Например, если вы переместите анимированный GIF-файл (назовите его ``under-construction.gif``) в новую директорию ``public/images/``, он будет доступен по URL-адресу, такому как ``https://localhost/images/under-construction.gif``.

Вы можете скачать мой GIF-файл отсюда:

.. code-block:: bash

    $ mkdir public/images/
    $ php -r "copy('http://clipartmag.com/images/website-under-construction-image-6.gif', 'public/images/under-construction.gif');"

Запуск локального веб-сервера
-------------------------------------------------------

.. index::
    single: Symfony CLI;server:start

Консольная утилита ``symfony`` включает в себя веб-сервер, оптимизированный для разработки. Как вы можете себе представить, он очень хорошо работает с Symfony. Однако никогда не используйте его в продакшене.

Запустите веб-сервер в фоновом режиме прямо из директории проекта, используя флаг ``-d``:

.. code-block:: bash

    $ symfony server:start -d

Сервер запустится на первом доступном порту, начиная с 8000. Вы можете открыть сайт по ссылке из CLI:

.. code-block:: bash
    :class: ignore

    $ symfony open:local

В вашем браузере по умолчанию откроется новая вкладка, на которой будет примерно следующее:

.. figure:: screenshots/symfony-greetings.png
    :alt: /
    :align: center
    :figclass: with-browser

.. tip::

    Для поиска причин неполадок используйте команду ``symfony server:log``; эта команда в режиме реального времени выводит последние строки из логов веб-сервера, PHP и самого приложения.

Перейдите к ``/images/under-construction.gif``. Выглядит так же?

.. figure:: screenshots/under-construction-web.png
    :alt: /images/under-construction.gif
    :align: center
    :figclass: with-browser

.. index::
    single: Git;add
    single: Git;commit

Довольны результатом? Теперь давайте закоммитим нашу работу:

.. code-block:: bash
    :class: ignore

    $ git add public/images
    $ git commit -m'Add the under construction image'

Добавление фавиконки
---------------------------------------

Чтобы убрать из логов большое количество HTTP-ошибок 404 из-за отсутствующей фавиконки, которую автоматически запрашивают браузеры, давайте добавим её:

.. code-block:: bash

    $ php -r "copy('https://symfony.com/favicon.ico', 'public/favicon.ico');"
    $ git add public/
    $ git commit -m'Add a favicon'

Подготовка к развёртыванию в продакшене
--------------------------------------------------------------------------

.. index::
    single: SymfonyCloud;Initialization

Как насчёт развёртывания нашей работы в продакшене? Я в курсе, что у нас пока ещё нет HTML-страницы, чтобы поприветствовать пользователей. Но даже если мы просто посмотрим на маленькую картинку с надписью "under construction" в продакшене — это будет большим шагом вперёд. Ну, вы наверняка знаете этот девиз: *разворачивай приложение как можно раньше и чаще*.

Вы можете разместить приложение у любого провайдера с поддержкой PHP... то есть почти на всех хостингах. Но учтите несколько требований: поддержка последней версии PHP, наличие баз данных, сервера очереди и т.п.

Я сделал свой выбор: это будет `SymfonyCloud <https://symfony.com/cloud>`_. У него есть всё необходимое, а кроме этого он помогает финансировать разработку Symfony.

.. index::
    single: Symfony CLI;project:init

В консольной команде ``symfony`` есть встроенная поддержка SymfonyCloud. Давайте создадим проект в SymfonyCloud:

.. code-block:: bash

    $ symfony project:init

Эта команда создаёт несколько файлов, которые требуются для работы с SymfonyCloud: ``.symfony/services.yaml``, ``.symfony/routes.yaml`` и ``.symfony.cloud.yaml``.

Добавьте их в Git и закоммитьте:

.. code-block:: bash

    $ git add .
    $ git commit -m"Add SymfonyCloud configuration"

.. note::

    Использование универсальной команды ``git add .`` может быть рискованно. Но не в нашем случае, так как все файлы, которые нам не нужно коммитить, будут исключены автоматически благодаря сгенерированному во время создания проекта файлу ``.gitignore``.

Развёртывание в продакшене
--------------------------------------------------

.. index::
    single: Symfony CLI;project:create
    single: Symfony CLI;deploy

Не пора ли нам развернуть приложение?

Создайте новый проект SymfonyCloud:

.. code-block:: bash

    $ symfony project:create --title="Guestbook" --plan=development

Эта команда выполняет ряд операций:

* При первом запуске этой команды нужно пройти аутентификацию с помощью учётной записи SymfonyConnect, если вы ранее этого не сделали.

* Команда создаст новый проект на SymfonyCloud (в течение 7 дней вы можете *бесплатно* разместить любой новый проект).

Наконец, разворачиваем приложение:

.. code-block:: bash

    $ symfony deploy

Приложение разворачивается автоматически каждый раз при отправке новых изменений в Git-репозиторий. После того как команда отработает, проект будет доступен по уникальному доменному имени.

.. index::
    single: Symfony CLI;open:remote

Убедитесь, что всё работает хорошо:

.. code-block:: bash
    :class: ignore

    $ symfony open:remote

Вы должны получить ошибку 404, но перейдя на  ``/images/under-construction.gif``, вы увидите GIF-изображение.

Обратите внимание, что вы не увидите стандартную красивую страницу Symfony на SymfonyCloud. Почему? Скоро вы узнаете, что Symfony поддерживает работу с несколькими окружениями, а SymfonyCloud автоматически развёрнул код в окружении продакшена.

.. index::
    single: Symfony CLI;project:delete

.. tip::

    Если вы хотите удалить проект на SymfonyCloud, воспользуйтесь командой ``project:delete``.

.. sidebar:: Двигаемся дальше

    * `Сервер рецептов Symfony <https://flex.symfony.com/>`_, где вы можете найти все рецепты, которые можете использовать в собственных приложениях на Symfony;

    * Репозитории `официальных рецептов Symfony <https://github.com/symfony/recipes>`_ и `рецептов сообщества <https://github.com/symfony/recipes-contrib>`_, где вы можете разместить свои рецепты;

    * `Локальный веб-сервер Symfony <https://symfony.com/doc/current/setup/symfony_server.html>`_;

    * `Документация SymfonyCloud <https://symfony.com/doc/cloud>`_.
